# python-project-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci-test.yaml
app/: example.py
examples/: docsting_kor.py
hooks/: post_gen_project.py
scripts/: lint.sh  test.sh  typecheck.sh
tests/: test_example.py
{{cookiecutter.project_name}}/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/: .pre-commit-config-only-hooks.yaml
{{cookiecutter.project_name}}/app/util/: logger.py
