[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "This is python project template"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
black = {extras = ["jupyter"], version = "^22.6.0"}
isort = "^5.10.1"
mypy = "^0.981"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"
flakeheaven = "^2.0.0"
jupyter = "^1.0.0"
refurb = "^1.7.0"
cookiecutter = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = [".venv", "__pycache__", ".git"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = "True"
use_parentheses ="True"

[tool.refurb]
python-version = "3.10"

[tool.flakeheaven]
exclude = [".venv", "__pycache__", ".git", "examples"]
# format = "grouped"
show_source = "True"
statistics = "True"
accept_encodings = "utf-8"
max_complexity = 6
max_line_length = 88
doctests = "True"
enable_extensions = "G"

[tool.flakeheaven.plugins]
pycodestyle = [
    "+*",
    "-E203",
    "-W503",
    "-W504",
    "-W605"]
pyflakes = ["+*"]
mccabe = ["+*"]

[tool.mypy]
python_version = "3.10"
show_error_context = "True"
show_column_numbers = "True"
show_error_codes = "True"
pretty = "True"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
exclude = ["examples/*.*"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing:skip-covered tests/"
